MCU PROGRAMES/workspace_1.14.1/.metadata/.plugins/org.eclipse.cdt.ui/lcddddd.build.log
14:53:14 **** Incremental Build of configuration Debug for project lcddddd ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:61:17: warning: implicit declaration of function 'delay'; did you mean 'delayMs'? [-Wimplicit-function-declaration]
   61 |                 delay();
      |                 ^~~~~
      |                 delayMs
../Core/Src/main.c:62:17: warning: implicit declaration of function 'LCD_display' [-Wimplicit-function-declaration]
   62 |                 LCD_display("1 \n");
      |                 ^~~~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:172:9: warning: data definition has no type or storage class
  172 |         LCD_Init();
      |         ^~~~~~~~
../Core/Src/main.c:172:9: warning: type defaults to 'int' in declaration of 'LCD_Init' [-Wimplicit-int]
../Core/Src/main.c:172:9: error: conflicting types for 'LCD_Init'; have 'int()'
../Core/Src/main.c:17:6: note: previous declaration of 'LCD_Init' with type 'void(void)'
   17 | void LCD_Init(void);
      |      ^~~~~~~~
../Core/Src/main.c:175:9: error: expected identifier or '(' before 'for'
  175 |         for(;;);
      |         ^~~
../Core/Src/main.c:175:15: error: expected identifier or '(' before ')' token
  175 |         for(;;);
      |               ^
../Core/Src/main.c:176:1: error: expected identifier or '(' before '}' token
  176 | }
      | ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

14:53:21 Build Failed. 5 errors, 4 warnings. (took 7s.115ms)

